Bug 470609 - Updates KCM not built for Qt 6
Summary: Updates KCM not built for Qt 6
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_updates (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR grave
Target Milestone: ---
Assignee: Alexander Lohnau
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-06-03 20:57 UTC by Nate Graham
Modified: 2023-06-07 14:48 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2023-06-03 20:57:47 UTC
Because Discover's CMakeLists.txt file has this in it:

option(WITH_KCM "Build and install the updates KCM" ON)
if(WITH_KCM)
    # add_subdirectory(kcm)
endif()

No comment explaining why, even! If I uncomment it and try to build, I get the following error:

> Make Error at kcm/CMakeLists.txt:33 (kpackage_install_package):
>   Unknown CMake command "kpackage_install_package".

So I guess that's why.
Comment 1 Alexander Lohnau 2023-06-07 14:48:52 UTC
Git commit c3aa7a51d5068661ac38b5c0871d136d3232fe48 by Alexander Lohnau.
Committed on 07/06/2023 at 14:41.
Pushed by alex into branch 'master'.

Adjust KCM for KF6

We no longer use kpackage to install the QML files and use classes/QML files from kcmutils instead of KDeclarative
FIXED-IN: 6.0

M  +1    -1    CMakeLists.txt
M  +7    -13   kcm/CMakeLists.txt
R  +1    -1    kcm/ui/main.qml [from: kcm/package/contents/ui/main.qml - 099% similarity]
M  +2    -12   kcm/updates.cpp
M  +4    -4    kcm/updates.h

https://invent.kde.org/plasma/discover/-/commit/c3aa7a51d5068661ac38b5c0871d136d3232fe48