Adjust KCM for KF6

We no longer use kpackage to install the QML files and use classes/QML files from kcmutils instead of KDeclarative

BUG: 470609
FIXED-IN: 6.0